--- a/Cv.Aspire.Web/Components/Pages/Code Examples/Github.razor
+++ b/Cv.Aspire.Web/Components/Pages/Code Examples/Github.razor
@@ -2,10 +2,13 @@
 
 <PageTitle>GitHub</PageTitle>
 
-<h1>Github</h1>
-
-Deze site is gemaakt met .NET Aspire en de source code is beschikbaar op <a href="https://github.com/parijsy/Cv.Aspire" target="_blank">GitHub</a>
-
-@code {
-
-}
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h1>Github</h1>
+            <p>
+                Deze site is gemaakt met .NET Aspire en de source code is beschikbaar op <a href="https://github.com/parijsy/Cv.Aspire" target="_blank">GitHub</a>
+            </p>
+        </div>
+    </div>
+</div>
