Toelichting op weather pagina verder uitgewerkt.

--- a/Cv.Aspire.Web/Components/Pages/CvEmptyLayout.razor
+++ b/Cv.Aspire.Web/Components/Pages/CvEmptyLayout.razor
@@ -27,7 +27,7 @@
         </div>
         <div class="col">
             <figure class="figure" style="float:right;">
-                <img src="cv/yuri.jpeg" width="300" />
+                <img src="cv/yuri.jpeg" class="rounded" width="300" />
             </figure>
         </div>
     </div>
