Berichten worden niet meer gerenderd vanuit het ChatHistory object, maar vanuit een eigen collectie van ChatMessages. Hiermee kunnen we aangeven dat er nog gestreamed wordt en hoeven we bij het renderen niet te filteren binnen de ChatHistory. Daarnaast ook een Alert toegevoegd die tijdelijk wordt getoond als er een exception optreed tijdens de communicatie met de assistent.

--- a/Cv.Aspire.Web/Components/Pages/Code Examples/Assistant.razor
+++ b/Cv.Aspire.Web/Components/Pages/Code Examples/Assistant.razor
@@ -38,11 +38,25 @@
 
     <div class="row">
         <div class="col">
-        @foreach (var message in chat.Where(x => x.Role == AuthorRole.Assistant || x.Role == AuthorRole.User))
+        @foreach (var message in messages)
         {
             <div class="card mb-3 @(message.Role == AuthorRole.Assistant ? "text-bg-light" : "")">
                 <div class="card-header">@message.Role.ToString()</div>
-                <div class="card-body">@message.Content</div>
+                <div class="card-body">
+                    @message.Message
+                    @if (message.IsStreaming)
+                    {
+                        <div class="spinner-grow" role="status">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                    }
+                    </div>
+            </div>
+        }
+        @if (showAssistantAlert)
+        {
+            <div class="alert alert-danger" role="alert">
+                Er is iets fout gegaan bij de communicatie met de assistent.
             </div>
         }
         </div>
