Rewrote the GithubGistSnippet because the iframe didn't allowing linking to the gist. The new solution is a little fragile, but works in the current situation.

--- a/Cv.Aspire.Web/Components/Layout/Custom/GithubGistSnippet.razor
+++ b/Cv.Aspire.Web/Components/Layout/Custom/GithubGistSnippet.razor
@@ -1,7 +1,4 @@
 ﻿@inherits GithubGistSnippetBase
-@rendermode @(new InteractiveServerRenderMode(prerender: false))
 
-<section class="[ flex flex-col ]">
-    <article id="@Id" class="[ bg-gray-300 ]">
-    </article>
-</section>
+@((MarkupString)stylesheet)
+@((MarkupString)snippet)
